Rendering chat component

--- a/client/src/Pages/GamePage/gamePage.css
+++ b/client/src/Pages/GamePage/gamePage.css
@@ -9,7 +9,8 @@
 }
 
 .chat{
-    background-color:red;
-    overflow: auto;
+    background-color:rgb(240,240,240);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
