--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,15 @@ body{
   overflow:hidden;
   background-color: salmon;
 }
+html, body{
+  height:100%;
+  min-height:100%;
+}
+
+#root{
+  height:100%;
+}
+
+.playGroundContainer{
+  height:100%;
+}
