Styling chat container

--- a/client/src/Pages/GamePage/gamePage.css
+++ b/client/src/Pages/GamePage/gamePage.css
@@ -10,7 +10,10 @@
 
 .chat{
     background-color:rgb(240,240,240);
-    overflow-y: auto;
     overflow-x: hidden;
+    height:100%;
 }
 
+.gamePageContainer{
+    height:100%;
+}
