--- a/client/src/Pages/LandingPage/LandingPage.css
+++ b/client/src/Pages/LandingPage/LandingPage.css
@@ -13,11 +13,17 @@
 
 .joinCell{
     margin:10px;
+    text-align: center;
 }
 
 input{
     margin:10px;
 }
+
+ input:focus
+  {
+     outline: none;
+  }
 
 input[type=button]{
     background-color: #5b4caf;
