--- a/client/src/Pages/LandingPage/LandingPage.css
+++ b/client/src/Pages/LandingPage/LandingPage.css
@@ -59,3 +59,13 @@ input[type=text]{
 .selectors input{
     margin:0px;
 }
+
+.joinCell {
+    width: 100%;
+}
+
+.input-container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
