Fix chat box icons rendering

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -2,7 +2,6 @@
     flex:1;
     display:flex;
     flex-direction:column;
-    overflow-y: scroll;
     overflow-x:hidden;
     height:100%
 }
@@ -16,6 +15,7 @@
     flex:1;
     border-radius:18px;
     padding:8px;
+    width:80%;
 }
 
 .footerContainer{
@@ -27,9 +27,10 @@
 .sendButton{
     background-color:transparent;
     color:rgb(3,107,252);
-    padding:2px;
+    padding-top:8px;
     margin:5px;
     align-items: center;
+    width:10%;
 }
 
 .sendButton:hover{
@@ -39,9 +40,10 @@
 .micButton{
     background-color:transparent;
     color:rgb(3,107,252);
-    padding:2px;
+    padding-top:8px;
     margin:5px;
     align-items: center;
+    width:10%;
 }
 
 .micButton:hover{
@@ -50,6 +52,7 @@
 
 .chatContainer{
     flex:1;
+    overflow-y:auto;
 }
 
 .textContainer{
