--- a/client/src/Pages/GamePage/gamePage.css
+++ b/client/src/Pages/GamePage/gamePage.css
@@ -1,19 +1,46 @@
-.leaderBoard{
-    background-color:aqua;
-    overflow:auto;
+
+.gamePageContainer {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    background-color: #393e46
+    /*  */
+
+  }
+
+.leaderBoard {
+    flex: 1;
+    border: 5px solid black;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-left: 10px;
+    border-radius: 10px;
 }
 
 .canvas{
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-left:20px;
+    margin-right: 20px;
+    flex: 4;
     background-color: white;
-    margin:auto
+    border: 5px solid black;
+    border-radius: 10px;
 }
 
-.chat{
-    background-color:rgb(240,240,240);
-    overflow-x: hidden;
-    height:100%;
+.chatBox
+{
+    margin-top: 20px;
+    margin-bottom: 40px;
+    margin-right : 5px;
+    flex:1;
+    border: 5px solid black;
+    border-radius: 10px;
+    background-color: rgb(240,240,240);
 }
 
-.gamePageContainer{
-    height:100%;
-}
+
+
+
