--- a/client/src/Pages/LandingPage/LandingPage.css
+++ b/client/src/Pages/LandingPage/LandingPage.css
@@ -26,7 +26,7 @@ input{
   }
 
 input[type=button]{
-    background-color: #5b4caf;
+    background-color: #a2d2ff;
     border: none;
     color: white;
     padding: 6px 12px;
