--- a/client/src/components/LeaderBoard.css
+++ b/client/src/components/LeaderBoard.css
@@ -1,5 +1,38 @@
 .leader-board-container{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   height: 100%;
+}
+
+.copyCode {
+    flex: 1;
+    margin: 0;
+    /* border: 1px solid red; */
+}
+
+.player-details-container
+{
     display: flex;
     flex-direction:column;
     border: 1px solid black;
+    background-color: rgb(240,240,240);
+    flex: 10;
+    
 }
+
+.copyCode input[type=button]{
+    background-color:rgb(3,107,252);;
+    border: none;
+    color: white;
+    padding: 5px 5px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+}
+
+
+
+
