--- a/client/src/components/Player.css
+++ b/client/src/components/Player.css
@@ -1,4 +1,6 @@
 .player{
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
+    padding: 5px;
+    color:black;
 }
