--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ html{
 body{
   height:100%;
   overflow:hidden;
-  background-color: salmon;
+  background-color: #393e46;
 }
 html, body{
   height:100%;
