--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -2,6 +2,7 @@
     flex:1;
     display:flex;
     flex-direction:column;
+    overflow-y: scroll;
     overflow-x:hidden;
     height:100%
 }
@@ -15,7 +16,6 @@
     flex:1;
     border-radius:18px;
     padding:8px;
-    width:80%;
 }
 
 .footerContainer{
@@ -30,7 +30,6 @@
     padding-top:8px;
     margin:5px;
     align-items: center;
-    width:10%;
 }
 
 .sendButton:hover{
@@ -43,7 +42,6 @@
     padding-top:8px;
     margin:5px;
     align-items: center;
-    width:10%;
 }
 
 .micButton:hover{
@@ -52,7 +50,6 @@
 
 .chatContainer{
     flex:1;
-    overflow-y:auto;
 }
 
 .textContainer{
